HUE-189. Ship with more elaborate desktop/conf/pseudo-distributed.ini (etc.)
Minor additions to hue.ini and pseudo-distributed.ini.tmpl
(cherry picked from commit dcc737c0aa53eb49ff8401196321d7d9adbe4016)

--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -1,4 +1,7 @@
 [desktop]
+send_dbug_messagse=1
+database_logging=1
+
 [[auth]]
 # Uncomment the next line in order to use PAM for authentication.
 # This will check usernames and passwords against your linux system.
