--- a/apps/shell/src/shell/static/css/shell.css
+++ b/apps/shell/src/shell/static/css/shell.css
@@ -47,7 +47,7 @@
 	left: 0px;
 	top:0px;
 	margin:10px;
-	font-size:1.5em;
+	font-size:1.25em;
 	padding:10px;
 }
 
@@ -55,4 +55,22 @@
 	background-color:#ffffff;
 	margin-left:auto;
 	margin-right:auto;
+  -moz-user-select: none;
+  -webkit-user-select: none;
 }
+
+.shell .fixed_width_font{
+    font-family: monospace;
+    font-size: 14px;
+}
+
+.shell textarea{
+    border-width:0px;
+    width:70%;
+    overflow:hidden;
+    outline:none;
+    padding:0px;
+    resize:none;
+}
+
+
