--- a/apps/shell/src/shell/static/css/shell.css
+++ b/apps/shell/src/shell/static/css/shell.css
@@ -34,17 +34,19 @@
 	margin: 0px 5px 0px 0px;
 }
 
-.shell  div.toolbar .Button {
-	position: absolute;
-	top: 40px;
-	left: 65px;
-	padding: 7px;
-	margin: 0px 5px 0px 0px;
+.shell div.nav_menu{
+	position:absolute;
+	top: 37px;
+        left: 66px;
 }
 
 .shell .Button {
 	padding: 10px;
 	margin: 10px;
+}
+
+.shell .nav_button{
+	margin: -2px;
 }
 
 .shell textarea{
@@ -73,4 +75,8 @@
     margin-left:25%;
     background-color:#ffffff;
     padding: 2px 10px;
+}
+
+.shell .hidden{
+    display: none;
 }
